@@ -1,3 +1,5 @@
+- sort choices on virtual package by provided version (#12645)
+
 Version 3.07 - 11 January 2008, by Pascal "Pixel" Rigaux
 
 - add URPM::Package->changelogs, a wrapper around ->changelog_time, ->changelog_name, ->changelog_text
